# SoundProcessor

./: CMakeLists.txt  CovertWav.h  Fabric.cpp  FabricRegistration.h  Fabriс.h  WAV.h  converter.h  main.cpp  test.cpp  txt_parser.h
ConverWav/: ConvertWav.cpp  CovertWav.h
Exception_class/: Exception.h
Fabric/: Fabric.cpp  Fabric.h  FabricRegistration.h
Parser/: Parser.cpp  Parser.h  ParserRegistration.h
Sound Processor/: SoundProcessor.cpp  SoundProcessor.h
Work with wav/: WAV.cpp  WAV.h
convertors/: converter.cpp  converter.h
convertors/mix/: mix.cpp  mix.h
convertors/mute/: mute.cpp  mute.h
convertors/slowed_reverb/: slowed_reverb.cpp  slowed_reverb.h
convertors/speed_up/: speed_up.cpp  speed_up.h
convertors/speedup/: speedup.cpp  speedup.h
txt_parser/: txt_parser.cpp  txt_parser.h
